fullstack-notes-application/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # Keeps the rewrite logic working
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  # Standard way to define the controller
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /?(.*)
            # Change to ImplementationSpecific to allow regex
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 8080
          - path: /api/?(.*)
            # Change to ImplementationSpecific to allow regex
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-cluster-ip-service
                port:
                  number: 3000
